--- a/index.html
+++ b/index.html
@@ -136,122 +136,139 @@
 
   <body>
  
-    <!-- ======= Features Section ======= -->
-    <section class="features">
-      <div class="container"> 
-        <div class="section-title">
-          <h2>Projects</h2>
-          <p>My Data Projects! Here you will find a collection of various projects I have worked on in the past.</p>
-        </div> 
-      </div>
-      
-      <div class="bgColorRow">
-        <div class="col-lg-7 mx-auto">
-          <div class="gilarySection   ">
-          <div class="container"> 
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="card">
-                    <img src="assets/img/pred.jpeg" class="img-fluid  " alt="">
-                    <div class="card-body">
-                      <div class="rowTextContent">
-                        <a class="textLink" href="project-details2.html">
-                          <h3>Company Churn Prevention - Predictive Model & Strategic Implementation</h3>
-                        </a>
-                        <p class="descriptionText"> A project for a telecommunications company. Utilizing company data which
-                          predicts customer churn based on company features and pricing.
-                        </p>
-                        <ul>
-                          <li><i class="bi bi-check"></i> project for a telecommunications company</li>
-                          <li><i class="bi bi-check"></i> predicts customer churn based on company features and pricing</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 ms-auto">
-                  <div class="card">
-                    <img src="assets/img/com.png" class="img-fluid  " alt=""> 
-                    <div class="card-body">
-                      <div class="rowTextContent ">
-                        <a class="textLink" href="project-details3.html">
-                          <h3>Sales Forecast - Predictive Modeling & Interactive Dashboard</h3>
-                        </a>
-                        <p class="descriptionText"> Forecasting Project using machine learning on a Kaggle analysis for an
-                          E-commerce platform.
-                        </p>
-                        <p class="descriptionText">
-                          Predicts upcoming sales based on prior inventory data.
-                        </p>
-                        <ul>
-                          <li><i class="bi bi-check"></i> Forecasting Project using machine learning</li>
-                          <li><i class="bi bi-check"></i> Predicts upcoming sales based on prior inventory data</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> 
-          </div>
-          </div>
-        </div>
+<!-- ======= Features Section ======= -->
+<section class="features">
+  <div class="container">
+    <div class="section-title">
+      <h2>Projects</h2>
+      <p>My Data Projects! Here you will find a collection of various projects I have worked on in the past.</p>
+    </div>
+  </div>
 
-      </div>
+  <style>
+    .gilarySection {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      /* Add padding to the bottom and top of each section */
+    }
+    .card {
+      transition: transform 0.5s ease-in-out;
+    }
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.11), 0 5px 15px rgba(0, 0, 0, 0.08);
+    }
+  </style>
 
-
-      <div class="col-lg-7 mx-auto">
-        <div class="gilarySection  ">
-        <div class="container"> 
-          <div class="row ">
+  <div class="bgColorRow">
+    <div class="col-lg-7 mx-auto">
+      <div class="gilarySection noPaddingTop">
+        <div class="container">
+          <div class="row">
             <div class="col-lg-6">
-              <div class="card grayColor">
-                <img src="assets/img/car.png" class="img-fluid  " alt="">
-                <div class="card-body">
+              <div class="card">
+                <div class="card-img-container">
+                  <img src="assets/img/gear2.png" class="img-fluid card-img" alt="">
+                </div>
+                <div class="card-body noPaddingTop">
                   <div class="rowTextContent">
-                    <a class="textLink" href="project-details4.html">
-                      <h3>Dealership - Langchain, Webscraper & Smart Used Vehicle Inventory Search</h3>
+                    <a class="textLink" href="project-details7.html">
+                      <h3>GearShift - FullStack Automation System for Car Dealerships</h3>
                     </a>
-                    <p class="descriptionText">An AI search tool using langchain and the GPT framework. Uses used vehicle
-                      inventory data to answer, compare, and describe features of vehicles in stock to customers.</p>
+                    <p class="descriptionText">My longest running passion project. Continous development, all in node JS, react, Python, and Postgres.</p>
                     <ul>
-                      <li><i class="bi bi-check"></i> AI search tool</li>
-                      <li><i class="bi bi-check"></i> Used vehicle inventory data</li>
-                      <li><i class="bi bi-check"></i> Compare, and describe features of vehicles.</li>
+                      <li><i class="bi bi-check"></i> Fully automate dealership lead communication</li>
+                      <li><i class="bi bi-check"></i> Fullstack web app, dealer facing dashboard created with react</li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-lg-6 ms-auto">
-              <div class="card grayColor">
-                <img src="assets/img/dash.png" class="img-fluid  " alt=""> 
+              <div class="card">
+                <div class="card-img-container">
+                  <img src="assets/img/getar.png" class="img-fluid card-img" alt="">
+                </div>
                 <div class="card-body">
-                  <div class="rowTextContent ">
-                    <a class="textLink" href="project-details5.html">
-                      <h3>Data Professionals - PowerBI Dashboard Project</h3>
+                  <div class="rowTextContent">
+                    <a class="textLink" href="project-details8.html">
+                      <h3>Modern Guitar - Fullstack B2C Guitar Playing Platform </h3>
                     </a>
-                    <p class="descriptionText"> Created an interactive dashboard based on data professionals job surveys.
-                    </p>
-                    <p class="descriptionText">
-                      Demonstrates basic metrics about employees in the data professions.
-                    </p>
+                    <p class="descriptionText">I wanted to make a platform that could do it all for guitarists, so I am building a fullstack platform that can do it all.</p>
                     <ul>
-                      <li><i class="bi bi-check"></i> Created an interactive dashboard based on data professionals job
-                        surveys.</li>
-                      <li><i class="bi bi-check"></i> Demonstrates basic metrics about employees in the data professions.
-                      </li>
+                      <li><i class="bi bi-check"></i> More intuitive modern UI/UX</li>
+                      <li><i class="bi bi-check"></i> Chord Diagrams, auto transposing jams, & a lesson funnel </li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
-          </div> 
+          </div>
+        </div>
       </div>
-        </div> 
+    </div>
+  </div>
 
+  <div class="col-lg-7 mx-auto">
+    <div class="gilarySection">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card grayColor">
+              <div class="card-img-container">
+                <img src="assets/img/car.png" class="img-fluid card-img" alt="">
+              </div>
+              <div class="card-body">
+                <div class="rowTextContent">
+                  <a class="textLink" href="project-details4.html">
+                    <h3>Dealership - Langchain, Webscraper & Smart Used Vehicle Inventory Search</h3>
+                  </a>
+                  <p class="descriptionText">An AI search tool using langchain and the GPT framework. Uses used vehicle inventory data to answer, compare, and describe features of vehicles in stock to customers.</p>
+                  <ul>
+                    <li><i class="bi bi-check"></i> AI search tool</li>
+                    <li><i class="bi bi-check"></i> Used vehicle inventory data</li>
+                    <li><i class="bi bi-check"></i> Compare, and describe features of vehicles.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 ms-auto">
+            <div class="card">
+              <div class="card-img-container">
+                <img src="assets/img/pred.jpeg" class="img-fluid card-img" alt="">
+              </div>
+              <div class="card-body">
+                <div class="rowTextContent">
+                  <a class="textLink" href="project-details2.html">
+                    <h3>Company Churn Prevention - Predictive Model & Strategic Implementation</h3>
+                  </a>
+                  <p class="descriptionText">A project for a telecommunications company. Utilizing company data which predicts customer churn based on company features and pricing.</p>
+                  <ul>
+                    <li><i class="bi bi-check"></i> Project for a telecommunications company</li>
+                    <li><i class="bi bi-check"></i> Predicts customer churn based on company features and pricing</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section><!-- End Features Section -->
+    </div>
+  </div>
+</section><!-- End Features Section -->
 
+<style>
+  .card-img-container {
+    height: 200px; /* Set a fixed height for the image container */
+    overflow: hidden; /* Hide overflow to maintain the card's layout */
+  }
+  .card-img {
+    width: 100%; /* Make the image take the full width */
+    height: 100%; /* Make the image take the full height */
+    object-fit: cover; /* Cover the container while maintaining aspect ratio */
+  }
+</style>
     </main><!-- End #main -->
 
     
