--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                   </p>
                   <h2>What is GearShift? ⚙️</h2>
                   <p class="fst-bold">
-                      During the summers I had internships or worked at my dad's family dealership, where I have been working at since before I could drive. Doing 
+                      During the summers I had internships or worked at my family operated dealership, where I have been working at since before I could drive. Doing 
                       everything from washing cars to buying them.
 
                       Last summer when I was working as a customer service person I couldn't help but recognize how useful the application for an AI agent would be in that sector
@@ -99,8 +99,8 @@
                   <h2>What I'm Obsessed With Lately 🚀</h2>
                   <ul>
                       <li><i class="bi bi-check2-circle"></i> Creating a full backend automation for car dealers to work better</li>
-                      <li><i class="bi bi-check2-circle"></i> Upon graduation taking a trip down to Cartagena, Colombia</li>
-                      <li><i class="bi bi-check2-circle"></i> Learn some cool new solos on the guitar, and start gigging</li>
+                      <li><i class="bi bi-check2-circle"></i> Learning more about fullstack web applications/li>
+                      <li><i class="bi bi-check2-circle"></i> Begin playing live shows</li>
                   </ul>
               </div> 
           </div>
@@ -119,7 +119,7 @@
     <div class="row counters">
       <div class="col-lg-3 col-6 text-center">
         <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-        <p>Years Innovating in Automotive Data</p>
+        <p>Fullstack Applications</p>
       </div>
 
       <div class="col-lg-3 col-6 text-center">
@@ -128,8 +128,8 @@
       </div>
 
       <div class="col-lg-3 col-6 text-center">
-        <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
-        <p>Hours Devoted to Data Science</p>
+        <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+        <p>Gigs Completed</p>
       </div>
 
       <div class="col-lg-3 col-6 text-center">
