--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <a class="textLink" href="project-details7.html">
                       <h3>GearShift - FullStack Automation System for Car Dealerships</h3>
                     </a>
-                    <p class="descriptionText">My longest running passion project. Continous development, all in node JS, react, Python, and Postgres.</p>
+                    <p class="descriptionText">My longest running passion project. Continous development, all in Node.js, React, Python, and Postgres.</p>
                     <ul>
                       <li><i class="bi bi-check"></i> Fully automate dealership lead communication</li>
                       <li><i class="bi bi-check"></i> Fullstack web app, dealer facing dashboard created with react</li>
