--- a/project.html
+++ b/project.html
@@ -92,7 +92,7 @@
                   <a href="project-details7.html">GearShift - FullStack Automation System for Car Dealerships</a>
                 </h5>
                 <p class="card-text">
-                  My longest running passion project. Continous development, all in node JS, react, Python, and Postgres.
+                  My longest running passion project. Continous development, all in Node.js, React, Python, and Postgres.
                 </p>
                 <div class="read-more">
                   <a href="project-details7.html"><i class="bi bi-arrow-right"></i> Read More</a>
