--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                   <h2>What I'm Obsessed With Lately 🚀</h2>
                   <ul>
                       <li><i class="bi bi-check2-circle"></i> Creating a full backend automation for car dealers to work better</li>
-                      <li><i class="bi bi-check2-circle"></i> Learning more about fullstack web applications/li>
+                      <li><i class="bi bi-check2-circle"></i> Learning more about fullstack web applications </li>
                       <li><i class="bi bi-check2-circle"></i> Begin playing live shows</li>
                   </ul>
               </div> 
