--- a/project-details7.html
+++ b/project-details7.html
@@ -91,7 +91,9 @@
                 <div class="swiper-slide">
                   <img src="assets/img/gear2.png" alt="">
                 </div>
-
+                <div class="swiper-slide">
+                  <img src="assets/img/chat.png" alt="">
+                </div>
                 <div class="swiper-slide">
                   <img src="assets/img/site.png" alt="">
                 </div>
